# theoshot

./: Cargo.toml
.github/workflows/: release.yml
src/: capture.rs  main.rs  ui.rs
src/ui/: app.rs  components.rs  mod.rs  painter.rs  renderer.rs  types.rs  utils.rs
