[package]
name = "theoshot"
version = "0.1.0"
authors = ["Alteon <alteonalves@gmail.com>"]
description = "A simple screen capture and annotation tool for Linux"
license = "MIT"
edition = "2024"

[package.metadata.deb]
maintainer = "Alteon <alteonalves@gmail.com>"
copyright = "2026, Alteon"
depends = "libgtk-3-0, libdbus-1-3, libpipewire-0.3-0"
section = "utility"
priority = "optional"
assets = [
    ["target/release/theoshot", "usr/bin/theoshot", "755"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/theoshot", dest = "/usr/bin/theoshot", mode = "755" },
]

[dependencies]
ashpd = { version = "0.13.10", features = ["screenshot"] }
image = "0.25.10"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
eframe = "0.30.0"
egui-phosphor = "0.8.0"
arboard = "3.4.1"
rfd = "0.15.2"
imageproc = "0.25.0"
font-kit = "0.14.2"
ab_glyph = "0.2.32"
url = "2.5.8"
